--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://www.xplusz.com" # the base hostname & protocol for your site
+url: "http://blog.xplusz.com/" # the base hostname & protocol for your site
 baseurl: ""
 
 # social icons and sharing options
