--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ markdown: redcarpet
 highlighter: pygments
 
 # Site settings
-title: "XPLUSZ | BLOG"
-description: > # X Plus Z Offical Blog
+title: "Jack Zhou | BLOG"
+description: > # Jack Zhou
 
 email: a-mail@mail.mail
 #blog logo
